<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Overhead Manager</string>

    <!-- ACTIVITY TITLES -->
    <string name="title_activity_meter_reading">Readings</string>
    <string name="title_activity_bills">Bills</string>
    <string name="title_activity_backup">Backup &amp; Restore</string>
    <string name="title_activity_stats">Statistics</string>
    <string name="title_activity_locations">Locations</string>
    <string name="title_activity_settings">Settings</string>

    <!-- BUTTONS -->
    <string name="button_ok">OK</string>

    <!-- ACTIVITY CONTENTS -->
    <string name="act_changelog_loading">Loading changelog…</string>
    <string name="act_meter_reading_reading_value">Meter reading</string>
    <string name="act_meter_reading_reading_value_hint">Numbers only</string>
    <string name="act_meter_reading_reading_kind">Meter</string>
    <string name="act_meter_reading_past_reading">I would like to set the date manually</string>
    <string name="act_meter_reading_select_date">Date of the reading:</string>
    <string name="act_meter_reading_select_date_error">Please set a past date!</string>

    <!-- MESSAGES -->
    <string name="message_general_please_wait">Please wait…</string>
    <string name="message_general_operation_finished">Operation finished successfully.</string>
    <string name="message_general_operation_error">Operation was unsuccessful.</string>
    <string name="message_error_field_is_mandatory">Mandatory field</string>
    
    <!-- NOTIFICATIONS -->
    <string name="notification_due_bill_title">Due bill</string>
    <string name="notification_due_bill_message">due bill found!</string>
    <string name="notification_due_bill_message_plural">due bills found!</string>

    <!-- MENUS -->
    <string name="menu_locations">Locations</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_save">Save</string>
    <string name="menu_clear">Clear</string>

    <!-- PREFERENCES -->
    <string name="prefs_category_reading">Reading preferences</string>
    <string name="prefs_category_bill">Bill preferences</string>
    <string name="prefs_reading_prices">Prices</string>
    <string name="prefs_bill_notification">Bill notifications</string>
    <string name="prefs_bill_notification_enable">Enable notifications</string>
    <string name="prefs_bill_notification_enable_desc">When enabled, OverheadManager notifies you about your due bills</string>
    <string name="prefs_bill_notification_enable_period">Advance in days</string>
    <string name="prefs_bill_notification_enable_period_desc">If a bill is due in the days you set, a notification will appear in the notification area.</string>
    <string name="prefs_bill_notification_enable_time">Notification time</string>
    <string name="prefs_bill_period">Billing periods</string>
    <string name="prefs_changelog">Changelog</string>
    <string name="prefs_enable_changelog">Enable changelog</string>
    <string name="prefs_enable_changelog_desc">Show changelog after every software update</string>
    <string name="prefs_show_changelog">Show changelog</string>

    <!-- FORMATS -->
    <string name="format_date">dd/MM/yyyy HH:mm</string>
    <string name="format_date_day_only">dd/MM/yyyy</string>
    <string name="format_currency">USD</string>

</resources>